--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,42 +5,42 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context="com.example.android.musictheoryquiz.MainActivity"
-android:background="@drawable/vintage_sheet_music"
+android:background="@drawable/vintage_sheet_music1"
 android:orientation="vertical">
 
 
     <TextView
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="7dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:fontFamily="@font/dancing"
+        android:fontFamily="@font/dancing_script"
         android:textSize="50sp"
         android:textColor="@android:color/black"
-        android:text="Music Theory quiz"
+        android:text="@string/music_theory_quiz"
         />
-
-
-    <Button
-        android:layout_marginTop="350dp"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Begin"
-        android:fontFamily="@font/dancing"
-        android:textStyle="bold"
-        android:textSize="38sp"
-        android:background="@android:color/transparent"/>
 
     <TextView
         android:textColor="@android:color/black"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/dancing"
+        android:fontFamily="@font/dancing_script"
         android:textSize="38sp"
         android:textStyle="bold"
-        android:text="Scale identification"/>
+        android:text="@string/scale_identification"/>
+
+
+    <Button
+        android:layout_marginTop="370dp"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=" b e g i n "
+        android:fontFamily="@font/dancing_script"
+        android:textSize="45sp"
+        android:background="@drawable/transparent_with_border"
+        android:onClick="beginTheQuiz"/>
 
 
 
