--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
     </style>
 
     <style name="RadioButtonText">
-        <item name="android:fontFamily">@font/dancing</item>
+        <item name="android:fontFamily">@font/dancing_script</item>
         <item name="android:textSize">25sp</item>
         <item name="android:paddingLeft">10dp</item>
         <item name="android:textStyle">bold</item>
