--- a/app/src/main/res/layout/the_first_question.xml
+++ b/app/src/main/res/layout/the_first_question.xml
@@ -7,6 +7,7 @@
     tools:context="com.example.android.musictheoryquiz.MainActivity"
     android:background="@drawable/notes_background"
     android:orientation="vertical"
+    android:id="@+id/first_question_layout"
     >
 
     <ImageView
@@ -76,8 +77,8 @@
         style="?android:progressBarStyleHorizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:max="100"
-        android:progress="20"
+        android:max="70"
+        android:progress="10"
         />
 
 
