--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,8 +13,17 @@
         <item name="android:textSize">25sp</item>
         <item name="android:paddingLeft">10dp</item>
         <item name="android:textStyle">bold</item>
-
     </style>
+
+    <style name="CheckBoxText">
+        <item name="android:fontFamily">@font/dancing_script</item>
+        <item name="android:textSize">25sp</item>
+        <item name="android:layout_marginLeft">90dp</item>
+        <item name="android:paddingLeft">20dp</item>
+        <item name="android:layout_marginBottom">5dp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 
 
 </resources>
